IGNITE-20360 Implement the set of zone supported storages (#93)